增加华为算法题测试